--- a/pantry-track/package.json
+++ b/pantry-track/package.json
@@ -9,8 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^2.1.2",
     "firebase": "^10.12.5",
-    "next": "14.2.5",
+    "lodash": "^4.17.21",
+    "lodash.debounce": "^4.0.8",
+    "next": "^14.2.5",
     "react": "^18",
     "react-dom": "^18"
   },
